Add `TextBlockStyle` based on `BaseTextBlockStyle` in `TextBlockTheme.xaml` (from here: new database)

--- a/TourPlanner.UI/Theme/TextBlockTheme.xaml
+++ b/TourPlanner.UI/Theme/TextBlockTheme.xaml
@@ -41,4 +41,8 @@
         <Setter Property="Padding" Value="10"/>
     </Style>
     
+    <Style x:Key="TextBlockStyle" BasedOn="{StaticResource BaseTextBlockStyle}" TargetType="TextBlock">
+        <!-- add (if needed): setter -->
+    </Style>
+    
 </ResourceDictionary>
