--- a/TourPlanner.UI/Theme/TextBlockTheme.xaml
+++ b/TourPlanner.UI/Theme/TextBlockTheme.xaml
@@ -25,7 +25,7 @@
            BasedOn="{StaticResource BaseTextBlockStyle}"
            TargetType="TextBlock">
         <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="Foreground" Value="#f7b2b2"/>
+        <Setter Property="Foreground" Value="#e8a0a0"/>
         <Setter Property="Margin" Value="5"/>
         <Setter Property="Padding" Value="10"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
@@ -36,7 +36,7 @@
            TargetType="TextBlock">
         <Setter Property="FontWeight" Value="Medium"/>
         <Setter Property="FontSize" Value="16"/>
-        <Setter Property="Foreground" Value="#f7b2b2"/>
+        <Setter Property="Foreground" Value="#e8a0a0"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="Padding" Value="10"/>
     </Style>
